<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash_bg_color"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:tint="@color/white"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_settings_menu" />

            <TextView
                android:id="@+id/namaDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:text="@string/Terima_Otomatis"
                android:textColor="@color/textGrey"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/butAutoBid"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:background="@drawable/select_button_on_off"
                    android:text="OFF"
                    android:textColor="@color/textGrey"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/Saldo_gift"
            android:textColor="@color/textGrey"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:text="@string/Maximum"
                android:textColor="@color/textGrey"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinMaximal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:entries="@array/list_maximum_shop"
                android:textColor="@color/textGrey"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/my_jobs"
            android:textColor="@color/textGrey"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fitMcar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_fitur_mcar" />

            <ImageView
                android:id="@+id/fitMride"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_fitur_mride" />

            <ImageView
                android:id="@+id/fitMsend"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_fitur_msend" />

            <ImageView
                android:id="@+id/fitMbox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_fitur_mbox" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fitMMart"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_fitur_mmart" />

            <ImageView
                android:id="@+id/fitMMassage"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_fitur_mmassage" />

            <ImageView
                android:id="@+id/fitMFood"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_fitur_mfood" />

            <ImageView
                android:id="@+id/fitMService"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_fitur_mservice" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/msg_job"
            android:textColor="@color/textGrey"
            android:textSize="14dp"
            />

    </LinearLayout>


</LinearLayout>

