<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Deposit Funds"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/logoBank"
            android:layout_width="250dp"
            android:layout_height="82dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_bca"
            app:srcCompat="@drawable/logo_bca" />

        <TextView
            android:id="@+id/namaBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text=" to Bank BCE"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/noRekBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="number Account Bank : 0091077xxxx"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/anBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_owner"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/pemilikRekening"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect_bg"
            android:gravity="left|center_vertical"
            android:hint="@string/Account_owner"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/nomorRekening"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect_bg"
            android:gravity="left|center_vertical"
            android:hint="Account number"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/spinBank"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect_bg"
            android:entries="@array/list_bank"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/nominalTransfer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect_bg"
            android:gravity="left|center_vertical"
            android:hint="Nominal Transfer"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="15dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/butUploadBukti"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/cardview_shadow_start_color"
                    android:gravity="center"
                    android:text="@string/Upload_transfer"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/centang"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_centang_yes"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/butTopup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="TOP UP Deposit"
                android:textColor="@color/cardview_light_background"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>


